Content-leri deyishdim, title kimi gosterdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -60,8 +60,8 @@
                             {
                                 <tr class="odd">
                                     <td class=" ">@item.Title</td>
-                                    <td class=" ">@item.Content</td>
-                                    <td class="img-style"><img width="120" height="160" src="@item.Imagepath" alt="Alternate Text" /></td>
+                                    <td class=" ">Blog Content</td>
+                                    <td class="img-style"><img width="60" height="60" src="@item.Imagepath" alt="Alternate Text" /></td>
                                     <td class=" ">@item.CreateDate</td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
