--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -52,9 +52,8 @@
                             @foreach (var item in Model)
                             {
                                 <tr class="odd">
-
                                     <td class="sorting_1">@item.Tittle</td>
-                                    <td class=" ">@item.Content</td>
+                                    <td class=" ">Contact Content</td>
                                     <td class="sorting_1">@item.Address</td>
                                     <td class="sorting_1">@item.PhoneNumber</td>
                                     <td class="sorting_1">@item.Email</td>
