--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -39,7 +39,6 @@
                 <a asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Add" class="btn about-button" style="color: #fff; background-color: #ffc925;">Create New Project Element</a>
             </div>
             <div class="adv-table editable-table ">
-
                 <div class="space15"></div>
                 <div id="editable-sample_wrapper" class="dataTables_wrapper form-inline" role="grid">
                     <table class="table table-striped table-hover table-bordered dataTable" id="myTable editable-sample" aria-describedby="editable-sample_info">
@@ -58,8 +57,8 @@
                                 {
                                     <tr class="odd">
                                         <td class="sorting_1">@item.Name</td>
-                                        <td class=" ">@item.Content</td>
-                                        <td class="img-style"><img src="@item.Image" width="120" height="160" alt="Alternate Text" /></td>
+                                        <td class=" ">Project Content</td>
+                                        <td class="img-style"><img src="@item.Image" width="60" height="60" alt="Alternate Text" /></td>
                                         <td class="edit-delete">
                                             <a class="edit" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
                                             <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
