--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Index.cshtml
@@ -59,7 +59,7 @@
 
                                     <td class="sorting_1">@item.FullName</td>
                                     <td class=" ">@item.Position</td>
-                                    <td class=" ">@item.Content</td>
+                                    <td class=" ">Testimonial Content</td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Update" asp-route-id="@item.id">Edit</a> |
                                         <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Delete" asp-route-id="@item.id">Delete</a>
