--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -64,8 +64,8 @@
                                 <tr class="odd">
 
                                     <td class="sorting_1">@item.Tittle</td>
-                                    <td class=" ">@item.Content</td>
-                                    <td class="img-style"><img src="@item.Image" width="120" height="160" alt="Alternate Text" /></td>
+                                    <td class="img-style">About Content</td>
+                                    <td class="img-style"><img src="@item.Image" width="60" height="60" alt="Alternate Text" /></td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a>
                                     </td>
