Areas-in index-de butun yazilari text-align: center etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -12,7 +12,6 @@
         font-size: 1.2em;
     }
     .common {
-        margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
     .edit-delete{
@@ -63,9 +62,9 @@
                             {
                                 <tr class="odd">
 
-                                    <td class="sorting_1">@item.Tittle</td>
-                                    <td class="img-style">About Content</td>
-                                    <td class="img-style"><img src="@item.Image" width="60" height="60" alt="Alternate Text" /></td>
+                                    <td class="sorting_1 img-style">@item.Tittle</td>
+                                    <td class="img-style img-style">About Content</td>
+                                    <td class="img-style img-style"><img src="@item.Image" width="60" height="60" alt="Alternate Text" /></td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a>
                                     </td>
