--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -13,7 +13,6 @@
         font-size: 1.2em;
     }
     .common {
-        margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
     .edit-delete {
@@ -59,8 +58,8 @@
                             @foreach (var item in Model)
                             {
                                 <tr class="odd">
-                                    <td class="sorting_1">@item.Name</td>
-                                    <td class=" ">@item.Tittle</td>
+                                    <td class="sorting_1 img-style">@item.Name</td>
+                                    <td class="img-style">Service Tittle</td>
                                     <td class="img-style"><img src="@item.Image" width="60" height="60" alt="Alternate Text" /></td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
