--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Index.cshtml
@@ -11,7 +11,6 @@
     }
 
     .common {
-        margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
 
@@ -57,9 +56,9 @@
                             {
                                 <tr class="odd">
 
-                                    <td class="sorting_1">@item.FullName</td>
-                                    <td class=" ">@item.Position</td>
-                                    <td class=" ">Testimonial Content</td>
+                                    <td class="sorting_1 edit-delete">@item.FullName</td>
+                                    <td class="edit-delete">@item.Position</td>
+                                    <td class="edit-delete">Testimonial Content</td>
                                     <td class="edit-delete">
                                         <a class="edit" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Update" asp-route-id="@item.id">Edit</a> |
                                         <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Delete" asp-route-id="@item.id">Delete</a>
