--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -9,7 +9,6 @@
         font-size: 1.2em;
     }
     .common {
-        margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
     .edit-delete {
@@ -21,7 +20,9 @@
         border-color: black;
         color: #fff;
     }
-
+    .img-style {
+        text-align: center;
+    }
 </style>
 
 <section class="panel common">
@@ -52,11 +53,11 @@
                             @foreach (var item in Model)
                             {
                                 <tr class="odd">
-                                    <td class="sorting_1">@item.Tittle</td>
-                                    <td class=" ">Contact Content</td>
-                                    <td class="sorting_1">@item.Address</td>
-                                    <td class="sorting_1">@item.PhoneNumber</td>
-                                    <td class="sorting_1">@item.Email</td>
+                                    <td class="sorting_1 img-style">@item.Tittle</td>
+                                    <td class="img-style">Contact Content</td>
+                                    <td class="sorting_1 img-style">@item.Address</td>
+                                    <td class="sorting_1 img-style">@item.PhoneNumber</td>
+                                    <td class="sorting_1 img-style">@item.Email</td>
                                     <td class="edit-delete"><a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
                                 </tr>
                             }
