--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
@@ -13,7 +13,6 @@
         font-size: 1.2em;
     }
     .common {
-        margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
     .edit-delete {
@@ -59,8 +58,8 @@
                             @foreach (var item in Model)
                             {
                                 <tr class="odd">
-                                    <td class="sorting_1">@item.Name</td>
-                                    <td class=" ">SubService Content</td>
+                                    <td class="sorting_1 img-style">@item.Name</td>
+                                    <td class="img-style">SubService Content</td>
                                     <td class="img-style">
                                         <img width="60" height="60" src="@item.ImagePath" alt="Alternate Text" />
                                     </td>
