--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -20,9 +20,6 @@
         border-color: black;
         color: #fff;
     }
-    .img-style {
-        text-align: center;
-    }
 </style>
 
 <section class="panel common">
@@ -53,15 +50,16 @@
                             @foreach (var item in Model)
                             {
                                 <tr class="odd">
-
-                                    <td class="sorting_1">@item.Tittle</td>
-                                    <td class=" ">@item.Content</td>
-                                    <td class="sorting_1">@item.Address</td>
-                                    <td class="sorting_1">@item.PhoneNumber</td>
-                                    <td class="sorting_1">@item.Email</td>
+                                    <td class="sorting_1 edit-delete">@item.Tittle</td>
+                                    <td class="edit-delete">Contact Content</td>
+                                    <td class="sorting_1 edit-delete">@item.Address</td>
+                                    <td class="sorting_1 edit-delete">@item.PhoneNumber</td>
+                                    <td class="sorting_1 edit-delete">@item.Email</td>
                                     <td class="edit-delete">
-                                        <i class="fa fa-pencil-square-o fa-2" aria-hidden="true">      <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Update" asp-route-id="@item.Id">Edit</a>
-                                        </i></td>
+                                        <i class="fa fa-pencil-square-o fa-2" aria-hidden="true">
+                                            <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Update" asp-route-id="@item.Id">Edit</a>
+                                        </i>
+                                    </td>
                                 </tr>
                             }
                         }
