--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -26,6 +26,16 @@
         .img-style {
             text-align: center;
         }
+        .edit-icon {
+            color: #6E90EC;
+            padding-right: 7%;
+            font-size: 1.3em;
+        }
+
+        .delete-icon {
+            color: #F0636A;
+            font-size: 1.3em;
+        }
     </style>
 
     <section class="panel common">
@@ -59,12 +69,9 @@
                                         <td class="img-style">Project Content</td>
                                         <td class="img-style"><img src="@item.Image" width="60" height="60" alt="Alternate Text" /></td>
                                         <td class="edit-delete">
-                                            <i class="fa fa-pencil-square-o fa-2" aria-hidden="true">
-                                                <a class="edit" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
-                                                </i>
-                                            <i class="fa fa-trash" aria-hidden="true">       <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                                            </i>
-</td>
+                                            <a class="edit" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Update" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
+                                            <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Delete" asp-route-id="@item.Id"> <i class="fa fa-trash delete-icon" aria-hidden="true"></i></a>
+                                        </td>
                                     </tr>
                                 }
                             }
