--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -20,6 +20,11 @@
         border-color: black;
         color: #fff;
     }
+    .edit-icon {
+        color: #6E90EC;
+        padding-right: 7%;
+        font-size: 1.3em;
+    }
 </style>
 
 <section class="panel common">
@@ -56,9 +61,7 @@
                                     <td class="sorting_1 edit-delete">@item.PhoneNumber</td>
                                     <td class="sorting_1 edit-delete">@item.Email</td>
                                     <td class="edit-delete">
-                                        <i class="fa fa-pencil-square-o fa-2" aria-hidden="true">
-                                            <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Update" asp-route-id="@item.Id">Edit</a>
-                                        </i>
+                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Update" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
                                     </td>
                                 </tr>
                             }
