--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
@@ -26,6 +26,16 @@
     .img-style {
         text-align: center;
     }
+    .edit-icon {
+        color: #6E90EC;
+        padding-right: 7%;
+        font-size: 1.3em;
+    }
+
+    .delete-icon {
+        color: #F0636A;
+        font-size: 1.3em;
+    }
 </style>
 
 <section class="panel common">
@@ -56,12 +66,8 @@
                                 <tr class="odd">
                                     <td class="img-style">@item.Name</td>
                                     <td class="edit-delete">
-                                        <i class="fa fa-pencil-square-o fa-2" aria-hidden="true">
-                                            <a class="edit" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" asp-route-id="@item.Id">Edit</a>
-                                        </i>|
-                                        <i class="fa fa-trash" aria-hidden="true">
-                                            <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                                            </i>
+                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
+                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash delete-icon" aria-hidden="true"></i></a>
                                     </td>
                                 </tr>
                             }
