--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
@@ -27,6 +27,16 @@
     .img-style {
         text-align: center;
     }
+    .edit-icon {
+        color: #6E90EC;
+        padding-right: 7%;
+        font-size: 1.3em;
+    }
+
+    .delete-icon {
+        color: #F0636A;
+        font-size: 1.3em;
+    }
 </style>
 
 <section class="panel common">
@@ -64,8 +74,8 @@
                                         <img width="60" height="60" src="@item.ImagePath" alt="Alternate Text" />
                                     </td>
                                     <td class="edit-delete">
-                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" asp-route-id="@item.Id">Edit</a> |
-                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" asp-route-id="@item.Id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
+                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash delete-icon" aria-hidden="true"></i></a>
                                     </td>
                                 </tr>
                             }
