--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Index.cshtml
@@ -25,6 +25,16 @@
     .edit:hover {
         border-color: black;
     }
+    .edit-icon {
+        color: #6E90EC;
+        padding-right: 7%;
+        font-size: 1.3em;
+    }
+
+    .delete-icon {
+        color: #F0636A;
+        font-size: 1.3em;
+    }
 </style>
 
 <section class="panel common">
@@ -59,10 +69,8 @@
                                     <td class="edit-delete">@item.Position</td>
                                     <td class="edit-delete">Testimonial Content</td>
                                     <td class="edit-delete">
-                                        <i class="fa fa-pencil-square-o fa-2" aria-hidden="true">
-                                            <a class="edit" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Update" asp-route-id="@item.id">Edit</a></i> |
-                                        <i class="fa fa-trash" aria-hidden="true"><a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Delete" asp-route-id="@item.id">Delete</a>
-                                        </i>
+                                        <a class="edit" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Update" asp-route-id="@item.id"><i class="fa fa-pencil-square-o fa-2 edit-icon" aria-hidden="true"></i></a>
+                                        <a class="delete delete-about" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Delete" asp-route-id="@item.id"><i class="fa fa-trash delete-icon" aria-hidden="true"></i></a>
                                     </td>
                                 </tr>
                             }
