--- a/ConstructionSite/Views/Shared/_UsefulLink.cshtml
+++ b/ConstructionSite/Views/Shared/_UsefulLink.cshtml
@@ -9,7 +9,7 @@
             <li class="last"><a asp-controller="About" asp-action="Index">About Us</a></li>
             <li><a asp-controller="Blog" asp-action="Index">News</a></li>
           
-            <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
+            <li><a asp-controller="Message" asp-action="Index">Contact</a></li>
            
         </ul>
     </div>
