--- a/ConstructionSite/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Views/Contact/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model ContactIndexViewModel
 @inject SharedLocalizationService Localizer
-
+@{
+    ViewData["Title"] = "Index";
+}
 <!-- Featured Title -->
 <div id="featured-title" class="clearfix featured-title-left">
     <div id="featured-title-inner" class="container clearfix">
