--- a/ConstructionSite/Views/Message/Index.cshtml
+++ b/ConstructionSite/Views/Message/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model MessageAddViewModel
 @inject SharedLocalizationService Localizer
+@{
+    ViewData["Title"] = "Index";
+}
 <style>
     #map {
         height: 400px;
