--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<PortfolioViewModel>
 @inject SharedLocalizationService Localizer
-
+@{
+    ViewData["Title"] = "Index";
+}
 <section id="works" class="wprt-section">
     <div class="container">
         <div class="row">
@@ -22,7 +24,7 @@
     <!-- /.container -->
 
     <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
-        <div id="project-filter" >
+        <div id="project-filter">
             <div data-filter="*" class="cbp-filter-item">
                 <span class="All">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
             </div>
@@ -34,24 +36,24 @@
             }
         </div>
         <div id="grid-container">
-           
+
         </div>
-        </div>
-      
+    </div>
+
 
 </section>
 <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
 
 @section scrips{
-   
+
     <script>
-       
-       
+
+
         $(document).ready(function () {
             var id = 0;
             $("#grid-container").load(`/Portfolio/Project/${id}`);
             $(".All").click(function () {
-              
+
 
                 $("#grid-container").load(`/Portfolio/Project/${id}`);
             });
@@ -59,9 +61,9 @@
                 id = $(this).data("id");
                 $("#grid-container").load(`/Portfolio/Project/${id}`);
             });
-           
-           
-           
+
+
+
 
         });
     </script>
