Footer-deki linkleri qaydaya saldim

--- a/ConstructionSite/Views/Services/Services.cshtml
+++ b/ConstructionSite/Views/Services/Services.cshtml
@@ -5,9 +5,8 @@
     <div id="featured-title-inner" class="container clearfix">
         <div class="featured-title-inner-wrap">
             <div class="featured-title-heading-wrap">
-                <h1 class="featured-title-heading">Services</h1>
+                <h1 class="featured-title-heading">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Services)</h1>
             </div>
-
         </div>
     </div>
 </div>
@@ -15,11 +14,9 @@
     <div id="content-wrap" class="container">
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
-
                 <div class="row">
                     <div class="col-md-12">
                         <div class="wprt-spacer" data-desktop="80" data-mobi="40" data-smobi="40" style="height:80px"></div>
-
                         <h3 class="line-height-normal margin-bottom-10">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.WhatIsIncluded)</h3>
                         <div class="wprt-lines style-1 custom-3">
                             <div class="line-1"></div>
