--- a/ConstructionSite/Views/Shared/_footerMenu.cshtml
+++ b/ConstructionSite/Views/Shared/_footerMenu.cshtml
@@ -15,5 +15,5 @@
 <li class="last"><a asp-controller="About" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.AboutUs)</a></li>
 <li><a asp-controller="Blog" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.News)</a></li>
 <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Conditions)</a></li>
-<li><a asp-controller="Contact" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
+<li><a asp-controller="Message" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
 <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Conditions)</a></li>
