--- a/ConstructionSite/Views/Services/Services.cshtml
+++ b/ConstructionSite/Views/Services/Services.cshtml
@@ -5,7 +5,7 @@
     <div id="featured-title-inner" class="container clearfix">
         <div class="featured-title-inner-wrap">
             <div class="featured-title-heading-wrap">
-                <h1 class="featured-title-heading">Services</h1>
+                <h1 class="featured-title-heading"> @Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Service)</h1>
             </div>
 
         </div>
