--- a/ConstructionSite/Views/Shared/_UsefulLink.cshtml
+++ b/ConstructionSite/Views/Shared/_UsefulLink.cshtml
@@ -7,7 +7,7 @@
             <li><a asp-controller="Portfolio" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</a></li>
 
             <li class="last"><a asp-controller="About" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.AboutUs)</a></li>
-            <li><a asp-controller="Blog" asp-action="Index">>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Blog)</a></li>
+            <li><a asp-controller="Blog" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Blog)</a></li>
 
             <li><a asp-controller="Message" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
 
