--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -97,7 +97,7 @@
                      data-splitin="none"
                      data-splitout="none"
                      data-responsive_offset="on">
-                    THE BEST COMPANY
+                    @Localizer.GetLocalizedHtmlString(RESOURCEKEYS.THEBESTCOMPANY)
                 </div>
                 <div class="tp-caption tp-resizeme text-white text-shadow"
                      data-x="['left','left','left','left']" data-hoffset="['55','30','30','30']"
