--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 
     <meta name="description" descriptions />
     <meta name="keywords" metapage />
-    <meta name="author" content="blogwp.com" />
+    <meta name="author" content="https://pdc.az/" />
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
