--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     <partial name="_LinkPartialStyle" />
    
     <!-- load cubeportfolio jQuery plugin -->
-    <script type="text/javascript" src="cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
+    @*<script type="text/javascript" src="cubeportfolio/js/jquery.cubeportfolio.min.js"></script>*@
     @await RenderSectionAsync("head", false)
 
     @*<style>
@@ -38,7 +38,7 @@
         </style>*@
 </head>
 
-<body class="front-page /*one-page*/  no-sidebar site-layout-full-width menu-has-cart header-sticky header-style-5">
+<body class="front-page   no-sidebar site-layout-full-width menu-has-cart header-sticky header-style-5">
     <div id="top"></div>
     <div id="wrapper" class="animsition">
         <div id="page" class="clearfix">
@@ -50,7 +50,7 @@
                             <div id="site-logo" class="clearfix">
                                 <div id="site-logo-inner">
                                     <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                                        <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light.png" data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 68px; top: -8px;  background-color: white;">
+                                        <img src="~/assets/img/logo-light.png" alt="Construction"  data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 68px; top: -8px;  background-color: white;">
                                     </a>
                                 </div>
                             </div>
@@ -106,7 +106,12 @@
     <partial name="_RevolutionPartialScripts" />
     <script type="text/javascript" src="~/customer/js/Component.js">
     </script>
-
+    <script>
+      
+        //$(document).ready(function () {                      // wait until 
+        //    $('img' + (i + 1)).attr('src','~/assets/img/logo-light.png'); // set the 
+        //});
+    </script>
     @RenderSection("Scrips", false)
 </body>
 </html>
